--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: |
-      pip install --upgrade pip && pip install -r requirements.txt
+      pip install --upgrade pip && pip install -r requirements-lock.txt
     startCommand: >
       gunicorn "wsgi:app" -w 2 -k gthread --threads 4 -b 0.0.0.0:$PORT
       --max-requests 200 --max-requests-jitter 50 --timeout 120
