--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: plant-care-ai-assistant
     env: python
     plan: free
-    region: oregon
     buildCommand: |
-      pip install --upgrade pip && pip install -r requirements-lock.txt
+      pip install --upgrade pip
+      pip install -r requirements-lock.txt
     startCommand: >
       gunicorn "wsgi:app" -w 2 -k gthread --threads 4 -b 0.0.0.0:$PORT
       --max-requests 200 --max-requests-jitter 50 --timeout 120
@@ -20,11 +20,11 @@ services:
         sync: false
       - key: OPENWEATHER_API_KEY
         sync: false
-      - key: RATE_LIMIT_ENABLED
+      - key: RATELIMIT_ENABLED
         value: "true"
-      - key: RATE_LIMIT_DEFAULT
+      - key: RATELIMIT_DEFAULT
         value: "60 per minute;300 per hour"
-      - key: RATE_LIMIT_ASK
+      - key: RATELIMIT_ASK
         value: "20 per minute;200 per day"
       # - key: RATELIMIT_STORAGE_URI
       #   sync: false
