--- a/render.yaml
+++ b/render.yaml
@@ -12,8 +12,10 @@ services:
     healthCheckPath: /healthz
     autoDeploy: true
     envVars:
+      - key: APP_CONFIG
+        value: app.config.ProdConfig
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: "3.11.9"
       - key: FLASK_SECRET_KEY
         sync: false
       - key: OPENAI_API_KEY
@@ -23,8 +25,9 @@ services:
       - key: RATELIMIT_ENABLED
         value: "true"
       - key: RATELIMIT_DEFAULT
-        value: "60 per minute;300 per hour"
+        value: "60 per minute; 300 per hour"
       - key: RATELIMIT_ASK
-        value: "20 per minute;200 per day"
+        value: "20 per minute; 200 per day"
+      # Optionally add storage if you move off memory:// (recommended in production)
       # - key: RATELIMIT_STORAGE_URI
-      #   sync: false
+      #   value: "redis://<host>:6379/0"
