--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,8 @@ services:
         value: "3.11.9"
       - key: FLASK_SECRET_KEY
         sync: false
+      - key: CF_BEACON_TOKEN
+        sync: false
       - key: OPENAI_API_KEY
         sync: false
       - key: OPENWEATHER_API_KEY
