Initial commit of latest feature updates (user profiles, dashboard, pricing info)

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ site/
 # Node modules (if any front-end build)
 # ========================================
 node_modules/
+
+# ========================================
+# Debug Docs and Notes
+# ========================================
+docs/
