Bug fixes and style changes

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,6 @@ node_modules/
 # ========================================
 # Debug Docs and Notes
 # ========================================
+.claude/
 docs/
+migrations/
