--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,7 +1,12 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.4.0
 Authlib==1.6.5
 blinker==1.9.0
+cachetools==6.2.1
 cairocffi==1.7.1
 CairoSVG==2.8.2
 certifi==2025.8.3
@@ -18,24 +23,41 @@ distro==1.9.0
 dnspython==2.8.0
 dparse==0.6.4
 email-validator==2.3.0
+fastuuid==0.14.0
 filelock==3.20.0
 Flask==3.0.3
 Flask-Limiter==3.8.0
 Flask-WTF==1.2.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.28.1
+google-api-python-client==2.186.0
+google-auth==2.42.1
+google-auth-httplib2==0.2.1
 google-generativeai==0.8.3
+googleapis-common-protos==1.71.0
+grpcio==1.76.0
+grpcio-status==1.71.2
 gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
+hf-xet==1.2.0
 hpack==4.1.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
+huggingface-hub==1.0.1
 hyperframe==6.1.0
 idna==3.10
+importlib_metadata==8.7.0
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.11.0
 joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 limits==5.5.0
 litellm==1.70.0
 markdown-it-py==4.0.0
@@ -51,20 +73,29 @@ pillow==11.3.0
 pluggy==1.6.0
 postgrest==2.22.3
 propcache==0.4.1
+proto-plus==1.26.1
+protobuf==5.29.5
 psutil==7.1.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
+pyparsing==3.2.5
 pytest==8.3.2
 pytest-mock==3.14.0
 python-dotenv==1.0.1
+PyYAML==6.0.3
 realtime==2.22.3
 redis==7.0.1
+referencing==0.37.0
 regex==2025.10.23
 requests==2.32.4
 rich==13.9.4
+rpds-py==0.28.0
+rsa==4.9.1
 ruamel.yaml==0.18.16
 ruamel.yaml.clib==0.2.14
 safety==3.6.2
@@ -77,12 +108,16 @@ supabase==2.22.3
 supabase-auth==2.22.3
 supabase-functions==2.22.3
 tenacity==9.1.2
+tiktoken==0.12.0
 tinycss2==1.4.0
+tokenizers==0.22.1
 tomlkit==0.13.3
 tqdm==4.67.1
 typer==0.20.0
+typer-slim==0.20.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+uritemplate==4.2.0
 urllib3==2.5.0
 webencodings==0.5.1
 websockets==15.0.1
@@ -90,3 +125,4 @@ Werkzeug==3.1.3
 wrapt==1.17.3
 WTForms==3.2.1
 yarl==1.22.0
+zipp==3.23.0
