--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.4.0
 Authlib==1.6.5
+beautifulsoup4==4.12.3
 blinker==1.9.0
 cachetools==6.2.1
 cairocffi==1.7.1
@@ -102,6 +103,7 @@ safety==3.6.2
 safety-schemas==0.0.16
 shellingham==1.5.4
 sniffio==1.3.1
+soupsieve==2.8
 storage3==2.22.3
 StrEnum==0.4.15
 supabase==2.22.3
