--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -3,6 +3,7 @@ aiohttp==3.13.2
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+APScheduler==3.10.4
 attrs==25.4.0
 Authlib==1.6.5
 beautifulsoup4==4.12.3
@@ -88,6 +89,7 @@ pyparsing==3.2.5
 pytest==8.3.2
 pytest-mock==3.14.0
 python-dotenv==1.0.1
+pytz==2025.2
 PyYAML==6.0.3
 realtime==2.22.3
 redis==7.0.1
@@ -102,6 +104,7 @@ ruamel.yaml.clib==0.2.14
 safety==3.6.2
 safety-schemas==0.0.16
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 storage3==2.22.3
@@ -119,6 +122,8 @@ typer==0.20.0
 typer-slim==0.20.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
 uritemplate==4.2.0
 urllib3==2.5.0
 webencodings==0.5.1
