--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "baseline-browser-mapping": "^2.9.15",
     "tailwindcss": "^3.4.1"
   }
 }
