Fix AI assistant plant preset parameter to use unique plant ID rather that plant name

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+pythonpath = .
+
 # Filter out deprecation warnings from third-party packages
 filterwarnings =
     # Ignore Supabase SDK httpx deprecation warnings (from their internal code)
