--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,11 +1,11 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
+aiohttp==3.13.2
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 APScheduler==3.10.4
 attrs==25.4.0
-Authlib==1.6.6
+Authlib==1.6.5
 beautifulsoup4==4.12.3
 blinker==1.9.0
 cachetools==6.2.1
@@ -26,7 +26,7 @@ dnspython==2.8.0
 dparse==0.6.4
 email-validator==2.3.0
 fastuuid==0.14.0
-filelock==3.20.3
+filelock==3.20.0
 Flask==3.0.3
 Flask-Limiter==3.8.0
 Flask-WTF==1.2.1
@@ -66,7 +66,7 @@ limits==5.5.0
 litellm==1.80.5
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
-marshmallow==4.1.2
+marshmallow==4.0.1
 mdurl==0.1.2
 multidict==6.7.0
 nltk==3.9.2
@@ -79,9 +79,9 @@ pluggy==1.6.0
 postgrest==2.22.3
 propcache==0.4.1
 proto-plus==1.26.1
-protobuf==7.34.0rc1
+protobuf==5.29.5
 psutil==7.1.2
-pyasn1==0.6.2
+pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
@@ -95,6 +95,7 @@ python-dotenv==1.0.1
 pytz==2025.2
 PyYAML==6.0.3
 realtime==2.22.3
+redis==7.0.1
 referencing==0.37.0
 regex==2025.10.23
 requests==2.32.4
@@ -128,10 +129,10 @@ typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
 uritemplate==4.2.0
-urllib3==2.6.3
+urllib3==2.5.0
 webencodings==0.5.1
 websockets==15.0.1
-Werkzeug==3.1.5
+Werkzeug==3.1.3
 wrapt==1.17.3
 WTForms==3.2.1
 yarl==1.22.0
