AI performance update

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,3 +13,5 @@ filterwarnings =
     ignore::DeprecationWarning:supabase.*
     # Ignore Pydantic V2 migration warnings
     ignore:.*class-based.*config.*deprecated.*:DeprecationWarning:pydantic.*
+    # Ignore LiteLLM mock serialization warnings (mock objects lack all Pydantic fields)
+    ignore:.*PydanticSerializationUnexpectedValue.*:UserWarning:pydantic.*
